--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="column">
     <div class="card">
       <h3>Loto document</h3>
-      <a href="https://live.danwex.ideagenqpulse.com/QPulse/default.aspx#ViewID=Revision_DetailView_Active&ObjectKey=4978&ObjectClassName=Bacchus.Xpo.BusinessObjects.Documents.Revision&mode=View">Go to the document</a>
+      <a href="https://live.danwex.ideagenqpulse.com/QPulse/default.aspx#ViewID=Revision_DetailView_Active&ObjectKey=4978&ObjectClassName=Bacchus.Xpo.BusinessObjects.Documents.Revision&mode=View" deeplink="true">Go to the document</a>
       <p>Some text</p>
     </div>
   </div>
